can now upload profile photos

--- a/lab-mark/frontend/src/style/_layout.scss
+++ b/lab-mark/frontend/src/style/_layout.scss
@@ -17,5 +17,5 @@ body {
   height: 100%;
   width: 960px;
   margin: 0 auto;
-  background-color: $color-silver;
+  background-color: $color-teal;
 }
