charities now display

--- a/lab-mark/frontend/src/style/_base.scss
+++ b/lab-mark/frontend/src/style/_base.scss
@@ -11,6 +11,10 @@ strong {
   font-weight: bold;
 }
 
+a, span {
+  display: inline;
+}
+
 h1 {font-size: 2.5em;}
 h2 {font-size: 2.25em;}
 h3 {font-size: 2em;}
