--- a/lab-mark/frontend/src/component/header/header.scss
+++ b/lab-mark/frontend/src/component/header/header.scss
@@ -9,6 +9,7 @@
     top: 50%;
     transform: translate(0, -50%);
     display: inline;
+    font-family: $font-rubik;
   }
 
   nav {
@@ -26,6 +27,8 @@
           display: inline;
           margin-right: $margin * 2;
           text-decoration: none;
+          font-family: $font-mouse;
+          font-size: 2em;
         }
       }
     }
