--- a/lab-mark/frontend/src/component/app/app.scss
+++ b/lab-mark/frontend/src/component/app/app.scss
@@ -6,7 +6,7 @@
   .header {
     height: 10%;
     padding: $pad;
-    border-bottom: 2px solid black;
+    border-bottom: 3px inset black;
   }
 
   main {
