--- a/lab-christina/frontend/src/component/app/app.scss
+++ b/lab-christina/frontend/src/component/app/app.scss
@@ -1,7 +1,11 @@
-@import 'vars';
+@import '_vars';
 
 @media screen and (min-width: 960px) {
   .app {
     width: 960px;
     margin: 0 auto;
   }
+
+li {
+  list-style: none;
+}
