scss styles organized and updated / transition animations added

--- a/lab-christina/frontend/src/style/_vars.scss
+++ b/lab-christina/frontend/src/style/_vars.scss
@@ -1,5 +1,8 @@
-$primary-color: #6809B2;
-$accent-color: #A3B200;
+$primary-color: rgb(109, 188, 219);
+$accent-color-green: #4E7367;
 $background-color: white;
+$primary-color-opacity: rgb(215, 218, 219);
+$header-color: rgb(44, 62, 80);
+
 
 $font-main: georgia;
