--- a/lab-christina/frontend/src/component/footer/_footer.scss
+++ b/lab-christina/frontend/src/component/footer/_footer.scss
@@ -4,13 +4,16 @@
   color: $accent-color-green;
 }
 
-.mainHead {
+Footer {
+
   display: block;
   font-size: 40px;
   text-align: left;
   color: $background-color;
   text-align: center;
   letter-spacing: 2px;
+  height: 100px;
+  margin-bottom: 0;
 }
 
 nav {
